add helm to skill list

--- a/skill.adoc
+++ b/skill.adoc
@@ -49,11 +49,14 @@
 |DDD, クリーンアーキテクチャ, オニオンアーキテクチャ,etc...
 |業務で半年以上経験あり, 違いや利点を述べることができる, 理解してコーディングできる
 
-.4+|クラウド技術
+.5+|クラウド技術
 |Kubernates
 |業務で半年以上使用(インフラ運用込み), CRDへの理解
 
 |Kustomize
+|業務で半年以上使用, 環境差分構築可能
+
+|Helm
 |業務で半年以上使用, 環境差分構築可能
 
 |Prometheus, Grafana
